--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,11 +5,12 @@ on:
     tags:
       - 'v*'
 
+env:
+  OUTPUT_FOLDER: "./output"
+  FILENAME: "library"
+
 jobs:
   pack-library:
-    env:
-      OUTPUT_FOLDER: "./output"
-      FILENAME: "library"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository for deployment
@@ -105,14 +106,14 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: library-package
-        path: ./artifact/library
+        path: ./artifact/${{ env.FILENAME }}
     - name: Display structure
-      run: ls -R ./artifact/library
+      run: ls -R ./artifact/${{ env.FILENAME }}
     - name: Create Compressed File
       run: |
         cd ./artifact
-        tar -czvf ./library.tar.gz ./library
-        zip -r ./library.zip ./library
+        tar -czvf ./${{ env.FILENAME }}.tar.gz ./${{ env.FILENAME }}
+        zip -r ./${{ env.FILENAME }}.zip ./${{ env.FILENAME }}
         cd ..
     
     - name: Upload Build Asset
@@ -122,7 +123,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./artifact/library.tar.gz
-        asset_name: library.tar.gz
+        asset_name: ${{ env.FILENAME }}.tar.gz
         asset_content_type: application/gzip
     
     - name: Upload Build Asset
@@ -132,5 +133,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./artifact/library.zip
-        asset_name: library.zip
+        asset_name: ${{ env.FILENAME }}.zip
         asset_content_type: application/zip
